First commit on Portfolio Website

--- a/about.html
+++ b/about.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font Stylesheets -->
-    <!-- Start Caveat and Superdigital Font Stylesheets -->
+    <!-- Start Caveat Font Stylesheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"
       rel="stylesheet"
     />
-    <!-- End Caveat and Superdigital Font Stylesheets -->
+    <!-- End Caveat Font Stylesheets -->
     <!-- Start Montserrat Font Stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +33,6 @@
   <body>
     <nav class="zone green">
       <ul class="main-nav">
-        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contact</a></li>
